# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt
ir/: CMakeLists.txt
lang/scheme/: object.cpp  object.h  parser.cpp  scheme.cpp  scheme.h  scope.cpp  scope.h  tokenizer.h
lang/scheme-parser/: README.md
lang/scheme-tokenizer/: README.md
lang/tools/cmake/: BuildFlags.cmake
lang/tools/util/: util.h
src/: main.cc
src/Camera/: Camera.cc  Camera.h
src/Dispatcher/: Dispatcher.cc  Dispatcher.h
src/Engine/: Color.cc  Color.h  Constant.h  Engine.cc  Engine.h  Tools.h
src/Geometry/: Geometry.cc  Geometry.h
src/Light/: PointLight.cc  PointLight.h
src/Loader/: AssimpLoader.cc  AssimpLoader.h
src/Vector/: Vector2.h  Vector3.h
